# digital-mixer

./: .editorconfig  .gitignore  jack_conns.xml  main.py  notes  pyproject.toml  requirements.txt
digimix/: __init__.py
digimix/audio/: __init__.py  channels.py  utils.py
digimix/audio/io/: __init__.py  jack.py  jack_fix.py
digimix/midi/: dispatcher.py  generic_controls.py  jack_io.py  test_generic_controls.py
digimix/midi/devices/: akai_midimix.py
digimix/midi_io/: __init__.py
digimix/utils/: dicts.py  enum.py
digimix/utils/debug/: gstreamer.py
src/: main.py
src/digimix/audio/: __init__.py  base.py  buses.py  channels.py  inputs.py  utils.py
src/digimix/audio/gstreamer/: __init__.py  utils.py
src/digimix/audio/io/: jack.py  jack_fix.py  pipewire.py
src/digimix/midi/: dispatcher.py  generic_controls.py
src/digimix/midi/devices/: akai_midimix.py
src/digimix/utils/: callbacks.py  enum.py
src/digimix/utils/debug/: gstreamer.py
tests/digimix/audio/: test_base.py  test_buses.py  test_channels.py  test_inputs.py  test_utils.py
tests/digimix/audio/gstreamer/: test_utils.py
tests/digimix/audio/io/: test_jack.py
tests/digimix/midi/: test_dispatcher.py  test_generic_controls.py
