[tool.poetry]
name = "digimix"
version = "0.1.0"
description = ""
authors = ["Christian Kohlstedde <christian@kohlsted.de>"]

[tool.poetry.dependencies]
python = "^3.9"
mido = "^1.2.10"
python-rtmidi = "^1.4.9"
transitions = "^0.8.10"
pycairo = "^1.20.1"
PyGObject = "^3.42.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
